tests/snapshots/mdtest__parse_error__Missing_semicolon.snap
---
source: tests/mdtest.rs
expression: output
---
error: expected `:`
  ┌─ test input:1:10
  │
1 │ let input;
  │          ^ expected `:`
  │
  = expected `:`
